<resources>
    <string name="app_name">TrainingDiaryMVP</string>
    <string name="measurements_cleared">Measurements cleared</string>
    <string name="loading_measurements_error">Error while loading measurements</string>
    <string name="measurement_saved">Measurement saved</string>
    <string name="no_measurements">You have no measurements</string>
    <string name="profile">Profile</string>
    <string name="trainings">Trainings</string>
    <string name="exercises">Exercises</string>
    <string name="schemas">Schemas</string>
    <string name="statistics">Statistics</string>
    <string name="measurements">Measurements</string>
    <string name="action_settings">Settings</string>
    <string name="no_measurements_add">Add a measurement item +</string>
    <string name="edit_measurement">Edit measurement</string>
    <string name="add_measurement">Add measurement</string>
    <string name="neck">Neck</string>
    <string name="waist">Waist</string>
    <string name="right_forearm">Right forearm</string>
    <string name="left_forearm">Left forearm</string>
    <string name="arm_right">Right arm</string>
    <string name="arm_left">Left arm</string>
    <string name="calf_right">Right calf</string>
    <string name="calf_left">Left calf</string>
    <string name="thigh_right">Right thigh</string>
    <string name="thigh_left">Left thigh</string>
    <string name="chest">Chest</string>
    <string name="weight">Weight</string>
    <string name="comment">Comment</string>
    <string name="date">Date</string>
    <string name="comment_dialog_hint">ex. before/after workout</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="comment_empty">Comment is empty</string>
    <string name="aaa">Aaa</string>
</resources>
